basic layout completed

--- a/miniproj1/saveforlater.html
+++ b/miniproj1/saveforlater.html
@@ -1,1 +1,23 @@
-this is sample haha forgot i had sublime text woo
+<!DOCTYPE html>
+<html lang='en'>
+<head>
+	<meta charset='UTF-8'/>
+	<title>Save It Later!</title>
+	
+	<link rel="stylesheet" type="text/css" href="style.css" /> 
+
+</head>
+
+<body>
+	<div class ='initialbox'>
+		<div class='firstline'>
+			<div class='logo'>logo</div>
+			<div class='title'><h1>Save It Later!</h1></div>		
+		</div>
+		<div class='secondline'>
+			<input type="text" name="to be saved" value="What do you want to save?">
+			<input type="submit" value="Submit">
+		</div>
+	</div>
+</body>
+</html>
