--- a/miniproj1/saveforlater.html
+++ b/miniproj1/saveforlater.html
@@ -8,39 +8,67 @@
 	<script type="text/javascript">
 		
 
-		function closeButton(){
-			var button = document.createElement("BUTTON");
-			var t = document.createTextNode("X");
-			button.appendChild(t);
-			return button;
+		// Create a "close" button and append it to each list item
+		var myNodelist = document.getElementsByTagName("LI");
+		var i;
+		for (i = 0; i < myNodelist.length; i++) {
+			var span = document.createElement("SPAN");
+			var txt = document.createTextNode("\u00D7");
+			span.className = "close";
+			span.appendChild(txt);
+			myNodelist[i].appendChild(span);
 		}
 
-		function favButton(){
-			var button = document.createElement("BUTTON");
-			var t = document.createTextNode("STAR");
-			button.appendChild(t);
-			return button;
+		// Click on a close button to hide the current list item
+		var close = document.getElementsByClassName("close");
+		var i;
+		for (i = 0; i < close.length; i++) {
+			close[i].onclick = function() {
+				var div = this.parentElement;
+				div.style.display = "none";
+			}
 		}
 
+		// Add a "checked" symbol when clicking on a list item
+		var list = document.querySelector('ul');
+		list.addEventListener('click', function(ev) {
+			if (ev.target.tagName === 'LI') {
+				ev.target.classList.toggle('checked');
+			}
+		}, false);
+
+		
 		// Create a new list item when clicking on the "Add" button
 		function newElement() {
 			var li = document.createElement("li");
 			var inputValue = document.getElementById("myInput").value;
 			var a = document.createElement("a");
 			var t = document.createTextNode(inputValue);
-			li.appendChild(t);
 			if (inputValue === '') {
 				alert("links only please!");
 			} else {
 				a.href = inputValue;
+				a.target = "_blank";
+				li.setAttribute('id', inputValue);
 				a.appendChild(t);
 				li.appendChild(a);
 				document.getElementById("myUL").appendChild(li);
 
-				li.appendChild(closeButton());
-				li.appendChild(favButton());
 			}
 			document.getElementById("myInput").value = "";
+
+			var span = document.createElement("SPAN");
+			var txt = document.createTextNode("\u00D7");
+			span.className = "close";
+			span.appendChild(txt);
+			li.appendChild(span);
+
+			for (i = 0; i < close.length; i++) {
+				close[i].onclick = function() {
+					var div = this.parentElement;
+					div.style.display = "none";
+				}
+			}
 		} 
 
 		
@@ -62,8 +90,5 @@
 	<ul id="myUL">
 		<li><a href="https://www.sumeetgod.com/">https://www.sumeetgod.com</a></li>
 	</ul>
-
-	
-
 </body>
 </html>
