--- a/miniproj1/SaveForLater_HTML.html
+++ b/miniproj1/SaveForLater_HTML.html
@@ -30,12 +30,12 @@
 		<br>
 		
 		<!-- Create table to store entries -->
-		<table id="tableOfEntries" class="toCenter">
+		<table id="tableOfEntries" class="toCenter" border="1">
 			<tbody>
 				<tr>
-					<td>
+					<th scope="col" font-weight="bold">
 						Your Entries
-					</td>
+					</th>
 				</tr>
 			</tbody>
 		</table>
@@ -47,30 +47,82 @@
 	<!-- Body's Functions -->
 	<script>
 	
-	
 	/**
 	Function: addEntry
 	This function appends each user-entered entry to the end of the list. 
 	*/
 	function addEntry(){
-		//Create reference to table
-		var table = document.getElementById("tableOfEntries").getElementsByTagName("tbody")[0];
+		var table = document.getElementById("tableOfEntries")
+			.getElementsByTagName("tbody")[0]; //Reference to table
+	
+		//Check if any input (error checking)
+		if(getUserInput() === ""){
+			alert("You must enter something.");
+			return;
+		}
 		
 		//Create new row and add data cell to it
 		var newRow = table.insertRow(table.rows.length);
 		var newCell = newRow.insertCell(0);
 		
-		//Retrieve and convert user input to link
+		//Retrieve user input
 		var userInput = getUserInput();
-		//var userInputToLink = getUserInput().link("userInput");
 		
-		//Append user input to end of table
-		var entry = document.createTextNode(userInput);
-		newCell.appendChild(entry);
+		//Convert user input to link that opens up a new window
+		var newLink = document.createElement("a");
+		newLink.setAttribute("href", userInput);
+		newLink.setAttribute("target", "_blank");
+		var linkText = document.createTextNode(userInput);
+		newLink.appendChild(linkText);
+		
+		//Add the entered link into the cell
+		newCell.appendChild(newLink);
+		
+		//Add deleteButton to row
+		var delButton = document.createElement("button");
+		var delButtonText = document.createTextNode("Delete");
+		delButton.appendChild(delButtonText);
+		
+			//delButton.setAttribute("value", rowIndex);
+			//rowIndex += 1;
+			//delButton.setAttribute("onclick", "deleteRow(rowIndex)");
+		newCell.appendChild(delButton);
+		
+		//Add the favButton to row
+		var favButton = document.createElement("button");
+		var favButtonText = document.createTextNode("Favorite");
+		favButton.appendChild(favButtonText);
+		favButton.setAttribute("onclick", "favRow()");
+		newCell.appendChild(favButton);	
 		
 		clearTextBox();
 	
 	}
+	
+	//function deleteRow(rowIndex){
+			//console.log(rowIndex);
+			//table.deleteRow(rowIndex);
+			
+	//}
+	
+	function favRow(){
+		var table = document.getElementById("tableOfEntries")
+			.getElementsByTagName("tbody")[0]; //Reference to table
+		var favCell = table.row[table.rows.length - 1].insertCell[1];
+		var favText = document.createTextNode("Favorited!");
+		favCell.appendChild(favText);
+		
+		
+		//var cell = table.rows[table.rows.length].cell[0];
+		//cell.style.background-color = "green";
+			
+			
+			
+		//var tr = document.getElementById(table).getElementsByTagName("td");
+		//tr[0].style.background-color = "green";
+	}
+
+	
 	/**
 	Function: getUserInput
 	This function returns user input from the text box.
